<resources>
    <string name="app_name">mad3D</string>
    <string name="title_map_view">Map</string>
    <string name="title_explore_pois">Explore POIs</string>
    <string name="title_ar_view">AR view</string>
    <string name="download_pois">Download POIs</string>
    <string name="delete_pois">Delete POIs</string>
    <string name="filtering_button_alt_description">Filtering button</string>
    <string name="poi_icon">POI icon</string>
    <string name="startGps">start Gps</string>
    <string name="getGps">get Gps</string>
    <string name="stopGps">stop Gps</string>
    <string name="channel_name">POI Notifications</string>
    <string name="channel_description">Notifications for Points of Interest (POIs) near you.</string>
    <string name="suburbs">Suburbs</string>
    <string name="other">Other</string>
    <string name="cafes">Cafes</string>
    <string name="pubs">Pubs</string>
    <string name="restaurants">Restaurants</string>
    <string name="no_filter">No Filter</string>
</resources>