<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radio_no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_filter"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_restaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants" />

        <RadioButton
            android:id="@+id/radio_pubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pubs" />

        <RadioButton
            android:id="@+id/radio_cafes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafes" />

        <RadioButton
            android:id="@+id/radio_suburbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suburbs" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />

    </RadioGroup>

</LinearLayout>
